<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~  Copyright (c) 2018 European Molecular Biology Laboratory
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.ebi.uniprot.aa</groupId>
    <artifactId>unifire</artifactId>
    <packaging>pom</packaging>
    <version>2.0-SNAPSHOT</version>

    <modules>
        <module>core</module>
        <module>engine</module>
        <module>distribution</module>
        <module>procedures</module>
        <module>io</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <!-- uniprot and interpro -->
        <unirule.public.version>1.1</unirule.public.version>
        <interproscan-model.version>5.66-98.0</interproscan-model.version>
        <!-- logging -->
        <logback.version>1.4.14</logback.version>
        <slf4j.version>2.0.9</slf4j.version>
        <!-- commons/utils/etc -->
        <commons-collections.version>4.1</commons-collections.version>
        <commons-lang3.version>3.11</commons-lang3.version>
        <guava.version>30.0-jre</guava.version>
        <reflections.version>0.10.2</reflections.version>
        <!--Testing-->
        <mockito.version>3.6.0</mockito.version>
        <hamcrest.version>2.2</hamcrest.version>
        <junit5.version>5.8.2</junit5.version>
        <xmlunit.version>2.7.0</xmlunit.version>
        <!--JAXB-->
        <plugin.jaxb.version>2.0.9</plugin.jaxb.version>
        <jaxb2-rich-contract-plugin.version>2.0.1</jaxb2-rich-contract-plugin.version>
        <glassfish.jaxb.runtime.version>2.3.8</glassfish.jaxb.runtime.version>
        <javax-activation.version>1.1</javax-activation.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--Plugins-->
        <plugin.surefire.version>3.2.5</plugin.surefire.version>
        <plugin.failsafe.version>3.2.5</plugin.failsafe.version>
        <plugin.source.version>3.3.0</plugin.source.version>
        <junit-platform-surefire-provider.version>1.2.0</junit-platform-surefire-provider.version>
        <plugin.jacoco.version>0.8.10</plugin.jacoco.version>

        <!-- Test coverage -->
        <jacoco.outputDir>${project.build.directory}</jacoco.outputDir>

        <!-- Unit test report path -->
        <jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
        <jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</jacoco.reportPath>
        <http-uniprot-private-url>https://wwwdev.ebi.ac.uk/uniprot/artifactory</http-uniprot-private-url>
        <jansi.version>2.4.1</jansi.version>
    </properties>

    <!--Artifacts specified in the <dependencies> section will
    ALWAYS be included as a dependency of the child module(s)-->
    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>${commons-collections.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${hamcrest.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>${hamcrest.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
        </dependency>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>uk.ac.ebi.uniprot.aa</groupId>
                <artifactId>unirule.public</artifactId>
                <version>${unirule.public.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.uniprot.aa</groupId>
                <artifactId>unifire-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.uniprot.aa</groupId>
                <artifactId>unifire-io</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.uniprot.aa</groupId>
                <artifactId>unifire-engine</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.uniprot.aa</groupId>
                <artifactId>unifire-procedures</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.uniprot.aa</groupId>
                <artifactId>unifire-distribution</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.interpro.scan</groupId>
                <artifactId>interproscan-model</artifactId>
                <version>${interproscan-model.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jvnet.jaxb</groupId>
                <artifactId>jaxb2-basics-runtime</artifactId>
                <version>${plugin.jaxb.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jvnet.jaxb</groupId>
                <artifactId>jaxb-basics-annotate</artifactId>
                <version>${plugin.jaxb.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jvnet.jaxb</groupId>
                <artifactId>jaxb2-basics</artifactId>
                <version>${plugin.jaxb.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${glassfish.jaxb.runtime.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.activation</groupId>
                <artifactId>activation</artifactId>
                <version>${javax-activation.version}</version>
            </dependency>
            <dependency>
                <groupId>org.reflections</groupId>
                <artifactId>reflections</artifactId>
                <version>${reflections.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi -->
            <dependency>
                <groupId>org.fusesource.jansi</groupId>
                <artifactId>jansi</artifactId>
                <version>${jansi.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit5.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit5.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit5.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.xmlunit/xmlunit-core -->
            <dependency>
                <groupId>org.xmlunit</groupId>
                <artifactId>xmlunit-core</artifactId>
                <version>${xmlunit.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.xmlunit/xmlunit-matchers -->
            <dependency>
                <groupId>org.xmlunit</groupId>
                <artifactId>xmlunit-matchers</artifactId>
                <version>${xmlunit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${plugin.surefire.version}</version>
                    <configuration>
                        <systemProperties>
                            <property>
                                <name>http.proxyHost</name>
                                <value>${http.proxyHost}</value>
                            </property>
                            <property>
                                <name>http.proxyPort</name>
                                <value>${http.proxyPort}</value>
                            </property>
                        </systemProperties>

                            <skipTests>${skipUTs}</skipTests>
                            <!-- Exclude integration tests from unit test run-->
                            <excludes>
                                <exclude>**/*IT.java</exclude>
                                <exclude>**/IT*.java</exclude>
                            </excludes>
                            <argLine>
                                --add-opens java.base/java.lang=ALL-UNNAMED
                                --add-opens=java.base/java.util=ALL-UNNAMED
                                --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                                --add-opens=java.base/java.text=ALL-UNNAMED
                                ${jacoco.agent.ut.arg}
                            </argLine>

                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jvnet.jaxb</groupId>
                    <artifactId>jaxb-maven-plugin</artifactId>
                    <version>${plugin.jaxb.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${plugin.source.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                   <source>17</source>
                   <target>17</target>
                   <release>17</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${plugin.jacoco.version}</version>
                <configuration>
                    <append>true</append>
                </configuration>
                <executions>
                    <!-- Sets up jacaco for unit test coverage analysis (jacoco.agent.ut.arg) -->
                    <execution>
                        <id>prepare-ut-agent</id>
                        <phase>process-test-classes</phase>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${jacoco.reportPath}</destFile>
                            <propertyName>jacoco.agent.ut.arg</propertyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>jenkins</id>
            <activation>
                <property>
                    <name>env.BUILD_NUMBER</name>
                </property>
            </activation>

            <properties>
                <http.proxyHost>hx-wwwcache.ebi.ac.uk</http.proxyHost>
                <http.proxyPort>3128</http.proxyPort>
            </properties>

            <distributionManagement>
                <repository>
                    <id>uniprot-artifactory-deploy-public</id>
                    <name>Deploy Uniprot Maven Release</name>
                    <url>${http-uniprot-private-url}/public</url>
                </repository>
                <snapshotRepository>
                    <uniqueVersion>false</uniqueVersion>
                    <id>uniprot-artifactory-deploy-snapshot</id>
                    <name>Deploy Uniprot Maven Snapshot</name>
                    <url>${http-uniprot-private-url}/snapshot</url>
                </snapshotRepository>
            </distributionManagement>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>${plugin.failsafe.version}</version>
                        <configuration>
                            <systemProperties>
                                <property>
                                    <name>http.proxyHost</name>
                                    <value>${http.proxyHost}</value>
                                </property>
                                <property>
                                    <name>http.proxyPort</name>
                                    <value>${http.proxyPort}</value>
                                </property>
                            </systemProperties>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>1.7</version>
                        <executions>
                            <execution>
                                <id>add-generated-sources</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>add-source</goal>
                                </goals>
                                <configuration>
                                    <sources>
                                        <source>${basedir}/target/generated-sources</source>
                                    </sources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>uniprot-artifactory-public</id>
            <name>UniProt Artifactory for Public</name>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <url>https://wwwdev.ebi.ac.uk/uniprot/artifactory/public</url>
        </repository>
        <repository>
            <id>uniprot-artifactory-snapshots-plugin</id>
            <name>UniProt Artifactory Snapshot</name>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
                <checksumPolicy>warn</checksumPolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <url>https://wwwdev.ebi.ac.uk/uniprot/artifactory/snapshot</url>
        </repository>
    </repositories>

</project>